--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -146,9 +146,9 @@
           font-weight: bold;
         }
       }
-    .exhibitor-box.red{
+    .exhibitor-box.purple{
 			box-shadow: 1px 1px $light-grey;
-      border: 1px solid $grape;
+      border: 1px solid $diversity;
     }
     .exhibitor-box.green{
 			box-shadow: 1px 1px $light-grey;
@@ -159,7 +159,7 @@
  	      transform: scale(1.07);
       }
       .exhibitor-box.green::before,
-			.exhibitor-box.red::before,
+			.exhibitor-box.purple::before,
 			.shine-loop::before {
         position: absolute;
       	top: 0;
@@ -177,7 +177,7 @@
 				//animation-delay: 3s;
       }
       .exhibitor-box.green:hover::before,
-			.exhibitor-box.red:hover::before {
+			.exhibitor-box.purple:hover::before {
         -webkit-animation: shine 2.5s infinite;
       	animation: shine 2.5s infinite;
 				//-webkit-animation-delay: 3s;
@@ -227,6 +227,16 @@
 			height: 25px;
 		}
 	}
+
+.diversity-text {
+  color: $diversity;
+  font-weight: bold;
+}
+
+.green-text {
+  color: $melon;
+  font-weight:bold;
+}
 
 // flipped phone
 @media screen and (max-width: $breakpoint-mobile-flipped) {
