--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@
 $grape: #e73953;
 $licorice: #2d2d2c;
 $melon: #00d790;
+$diversity: #776aa2;
 $background-color: #fafafa;
 $text-color-dark: $licorice;
 $text-color-light: #fafafa;
