--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -67,7 +67,7 @@
       width: 25px;
       height: 25px;
     }
-    .icon_group{
+    .icon-group{
       text-align: center;
       align-items: center;
       display: flex;
