--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -51,51 +51,51 @@
 
 .exhibitors .search-containter{
   margin: auto;
-  margin-top: 1%;
-  margin-bottom: 5%;
-  margin-left: 50%;
-  transform: translate(-50%, 0%);
-
+	max-width: 20em;
+	padding: 0.1em 2em 1.5em 2em;
+	text-align: center;
   input{
+
+		box-shadow: 0 0.5em 0.35em -0.35em grey;
     height: 1.3em;
-    border: 0.1em solid $melon;
+    border: 0.1em solid #fafafa;
     border-radius: 0.3em;
     padding: 0.5em;
-    margin: auto;
-    width: 93%;
+		width: 95%
   }
   input:focus {
-    border: 4px solid $melon;
-    outline: none;
+  //border: 0.15em solid #e4e4e4;
   }
 }
+
 .checkbox-filtering{
-  padding-bottom: 3%;
+  padding: 0em 3em 1em 3em;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-left: 13%;
-  //margin: auto;
-  //align-content: stretch;
-  //justify-content: center;
+  justify-content: space-around;
+	margin: auto;
+	max-width: 700px;
+	//align-self: center;
+}
+.checkbox-filtering label{
+	display: block;
+	//height: 100%;
+	//width: 100%;
+	margin: 0;
+	align-self: center;
+
+}
+.checkbox-container{
+  width: 150px;
+	height: 2em;
+	font-size: 0.8em;
+	padding: 0em 0.5em 0em 0.5em;
+	//vertical-align: middle;
+	align-self: center;
+	//display: table-cell;
 }
 
-.checkbox1{
-  margin-right: 2%;
-  margin-bottom: 5%;
-}
-.checkbox2{
-  margin-right: 2%;
-  margin-bottom: 5%;
-}
-
-.checkbox3{
-  margin-right: 2%;
-}
-
-.checkbox4{
-  margin-right: 2%;
-}
 
 /* Base for label styling */
 [type="checkbox"]:not(:checked),
@@ -311,32 +311,16 @@
 
 // flipped phone
 @media screen and (max-width: $breakpoint-mobile-flipped) {
+	.exhibitors .search-containter{
+		max-width: 15em;
+	}
+
+	.exhibitors .checkbox-container{
+		height: 2em;
+		font-size: 0.8em;
+	}
+
   .exhibitors {
-    .checkbox-filtering{
-      padding-bottom: 7%;
-      margin-left: 5%;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-    }
-
-    .checkbox1{
-      margin-right: 9%;
-      margin-bottom: 5%;
-    }
-    .checkbox2{
-      margin-right: 2%;
-      margin-bottom: 5%;
-    }
-
-    .checkbox3{
-      margin-right: 4%;
-      margin-bottom: 5%;
-    }
-
-    .checkbox4{
-      margin-right: 2%;
-    }
     .exhibitor-feed {
       //padding: 1em 10px;
       .exhibitor-box {
