removed unused stuff and moved .content to general content component

--- a/src/components/Content/index.scss
+++ b/src/components/Content/index.scss
@@ -3,3 +3,17 @@
   align-items: stretch;
   flex-direction: column;
 }
+
+.content{
+  position: relative;
+  overflow: hidden;
+}
+
+.content{
+  position: relative;
+  overflow: hidden;
+  margin: 1em auto;
+  p {
+  	max-width: 850px;
+  }
+}
