paragrapf-styling in modal, phenomic-body-container margin auto added, filter label changed from internship to trainee

--- a/src/components/Content/index.scss
+++ b/src/components/Content/index.scss
@@ -2,18 +2,9 @@
   display: flex;
   align-items: stretch;
   flex-direction: column;
-}
-
-.content{
-  position: relative;
-  overflow: hidden;
-}
-
-.content{
   position: relative;
   overflow: hidden;
   margin: 1em auto;
-  p {
-  	max-width: 850px;
-  }
+  min-height: 100%;
+  height: auto;
 }
