--- a/src/layouts/Page/index.scss
+++ b/src/layouts/Page/index.scss
@@ -6,10 +6,11 @@
     display: none;
 }
 
-
 .phenomic-BodyContainer {
     p{
         text-align: justify;
         padding: 0em 1em;
+        max-width: 850px;
+        margin: auto;
     }
 }
