--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -3,8 +3,22 @@
   height: $size;
   border-radius: $size/2;
 }
-
 @mixin verticle-line($height, $thickness, $color){
     height: $height;
     border-right: $thickness solid $color;
+}
+@mixin centerer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+@mixin aspect-ratio($width, $height) {
+  position: relative;
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: ($height / $width) * 100%;
+  }
 }
