--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -80,7 +80,6 @@
     .modal-property p{
       margin: 0 0 0 5px;
     }
-
 }
 
 .modalinfo .description-container {
@@ -90,7 +89,7 @@
     //padding: 0em 0.1em 0em 0em;
   }
 .modalinfo .location-container {
-    padding: 1em 5em 1em 5em;
+    padding: 1em 0em 1em 0em;
   }
 .modalinfo .location-container .location{
   display: flex;
@@ -104,6 +103,7 @@
 .modalinfo .location-container .position{
   padding: 0em 0em 0em 0.5em;
   align-self: center;
+  font-weight: 300;
 }
 .modalinfo .location-container .map{
   padding: 2em 0em 2em 0em;
@@ -114,11 +114,7 @@
 .modalinfo .job-container .job-section{
   display: flex;
   flex-direction: column;
-}
-.modalinfo .job-container .job-section li{
-  margin-left: 40%;
-}
-li {
+  text-align: center;
   font-weight: 300;
 }
 a:hover {
@@ -127,6 +123,10 @@ a:hover {
 @media screen and (max-width:1200px) {
   .modalinfo .description-container {
       padding: 0.5em 3em 0.5em 3em;
+    }
+    .modalinfo .location-container .location{
+      font-weight: 300;
+
     }
 
 }
