--- a/src/layouts/Page/index.scss
+++ b/src/layouts/Page/index.scss
@@ -6,11 +6,12 @@
     display: none;
 }
 
-.phenomic-BodyContainer {
-    p{
-        text-align: justify;
-        padding: 0em 1em;
-        max-width: 850px;
-        margin: auto;
-    }
+.phenomic-BodyContainer p{
+        padding-bottom: 1em;
+}
+
+@media screen and (max-width: $breakpoint-mobile) {
+	.phenomic-BodyContainer  p{
+		//padding: 0em 2em 0em 2em;
+	}
 }
