--- a/src/components/Content/index.scss
+++ b/src/components/Content/index.scss
@@ -1,10 +1,25 @@
+@import "../../styles/global";
+
 .content {
   display: flex;
   align-items: stretch;
   flex-direction: column;
   position: relative;
   overflow: hidden;
-  margin: 1em auto;
+  margin: auto;
   min-height: 100%;
   height: auto;
+  max-width: 850px;
+}
+
+.content p{
+  text-align: justify;
+  margin: 0;
+}
+
+@media screen and (max-width: $breakpoint-mobile) {
+	.content p{
+    //padding: 0em 2em 0em 2em;
+	}
+
 }
