--- a/src/components/PagePreview/index.css
+++ b/src/components/PagePreview/index.css
@@ -1,3 +1,5 @@
+/*
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -21,8 +23,10 @@
   font-size: 0.85rem;
 }
 
-.readMore {
+.readMore { */
   /* align-self: center; */
+
+/*
   display: inline-flex;
   margin-top: 1rem;
   border-radius: 3px;
@@ -31,3 +35,4 @@
   border-bottom: 0 !important;
   text-decoration: none !important;
 }
+*/
