--- a/src/layouts/Aboutpage/index.scss
+++ b/src/layouts/Aboutpage/index.scss
@@ -1,17 +1,12 @@
 @import "../../styles/global";
 
 .aboutpage-container {
-	max-width: 850px;
-	margin: auto;
-	margin-top: 3em;
-	margin-bottom: 3em;
-
+	padding-top: 3em;
 }
 
 @media screen and (max-width: $breakpoint-mobile) {
-
 	.aboutpage-container {
-        margin: 1em 5vw 0em 5vw;
+		//padding: 0em 2em 0em 2em;
 	}
 
 }
