--- a/src/layouts/Events/index.scss
+++ b/src/layouts/Events/index.scss
@@ -1,6 +1,20 @@
+@import '../../styles/_variables';
+@import '../../styles/_fonts';
+
 .Events-container {
-  position: static;
-  max-width: 850px;
-  margin: auto;
-  padding: 1em 0em;
+  padding: 3em 0em;
+  //position: static;
+  //max-width: 850px;
+  //margin: auto;
+  //padding: 1em 0em;
+}
+
+@media screen and (max-width: $breakpoint-mobile-flipped){
+  .Events-container {
+    padding: 3em 1em;
+    //position: static;
+    //max-width: 850px;
+    //margin: auto;
+    //padding: 1em 0em;
+  }
 }
