--- a/src/layouts/Plainpage/index.scss
+++ b/src/layouts/Plainpage/index.scss
@@ -34,7 +34,7 @@
 
 .plainpage-container p{
 	text-align: justify;
-	padding: 0em 1em;
+	padding: 0em 1em 1em 1em;
 	max-width: 850px;
 	margin: auto;
 
