bugfix padding on exhibitor-info

--- a/src/layouts/Events/index.scss
+++ b/src/layouts/Events/index.scss
@@ -3,8 +3,8 @@
 
 .Events-container {
   padding: 3em 0em;
+  max-width: $page-width;
   //position: static;
-  //max-width: 850px;
   //margin: auto;
   //padding: 1em 0em;
 }
