--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,8 @@ $header-min-height: 300px;
 $header-height: 380px;
 $footer-max-height: 128px;
 $mobile-edge: 1em;
+$page-width: 850px;
+
 
 
 // Animation
