--- a/src/components/Partners/partners.scss
+++ b/src/components/Partners/partners.scss
@@ -1,7 +1,8 @@
 
 .partners {
-    margin-top: 50px;
+    margin-top: 2em;
     text-align: center;
+    padding-bottom: 3em;
 }
 
 .partners-table{
