--- a/src/layouts/Aboutpage/index.scss
+++ b/src/layouts/Aboutpage/index.scss
@@ -1,7 +1,9 @@
 @import "../../styles/global";
+@import "../../styles/_variables";
 
 .aboutpage-container {
 	padding-top: 3em;
+  max-width: $page-width;
 }
 
 @media screen and (max-width: $breakpoint-mobile) {
