--- a/src/layouts/Aboutpage/index.scss
+++ b/src/layouts/Aboutpage/index.scss
@@ -8,7 +8,7 @@
 
 @media screen and (max-width: $breakpoint-mobile) {
 	.aboutpage-container {
-		//padding: 0em 2em 0em 2em;
+		padding: 3em 1em 0em 1em;
 	}
 
 }
