--- a/src/layouts/Events/index.scss
+++ b/src/layouts/Events/index.scss
@@ -5,7 +5,7 @@
   padding: 3em 0em;
   max-width: $page-width;
   //position: static;
-  //margin: auto;
+  margin: auto;
   //padding: 1em 0em;
 }
 
