--- a/src/components/EventList/eventlist.scss
+++ b/src/components/EventList/eventlist.scss
@@ -62,6 +62,16 @@
     color: $licorice;
   }
 }
+.pastEvents p{
+  text-align: center;
+  padding: 1em;
+}
+.comingEvents p{
+  text-align: center;
+  padding: 1em;
+  opacity: .5;
+  filter: alpha(opacity=50);
+}
 .thickline{
   hr{
     border: none;
@@ -75,7 +85,6 @@
     color: $licorice;
   }
   .pastEvent{
-    //z-index: 10;
     opacity: .5;
     filter: alpha(opacity=50);
   }
