--- a/src/components/Jumbotron/jumbotron.scss
+++ b/src/components/Jumbotron/jumbotron.scss
@@ -62,8 +62,8 @@
         img{
             filter: blur(2px) brightness(0.9);
             min-width: 100%;
-            min-height: 100%;
-            max-height: 100%;
+            min-height: 40%;
+            max-height: 40%;
             width: 100vw;
             object-fit: cover;
             z-index: 1;
@@ -115,6 +115,10 @@
       color: $text-color-light;
       text-align: center;
     }
+}
+
+.logo-container.fixed{
+    height: 45%;
 }
 
 @media screen and (min-height: 1000px) {
