--- a/src/components/Recruitment/recruitment.scss
+++ b/src/components/Recruitment/recruitment.scss
@@ -58,6 +58,35 @@ button[disabled] {
 
 .role-header{
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+}
+
+.role-header-left{
+    width: 90%;
+}
+.role-header-right{
+    width: 10%;
+    text-align: right;
+}
+
+.arrow-icon{
+    float: right;
+    transition: transform 0.35s ease-in-out;
+}
+.collapsed-arrow{
+    transform: rotate(180deg);
+}
+.expanded-arrow{
+    transform: rotate(360deg);
+}
+.role-description{
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.35s ease-in-out;
+}
+.expanded {
+    max-height: 500px;
 }
 
 }
