--- a/src/components/Recruitment/recruitment.scss
+++ b/src/components/Recruitment/recruitment.scss
@@ -75,27 +75,44 @@
 }
 .role-header-right{
     width: 10%;
+    z-index: -1;
     text-align: right;
 }
 
 .arrow-icon{
     float: right;
     transition: transform 0.35s ease-in-out;
+    font-size: 40px;
+    color: $melon;
+    line-height: 100%;
 }
 .collapsed-arrow{
-    transform: rotate(180deg);
+    transform: rotate(90deg);
 }
 .expanded-arrow{
-    transform: rotate(360deg);
+    transform: rotate(270deg);
 }
+
 .role-description{
-    max-height: 0px;
     overflow: hidden;
     transition: max-height 0.35s ease-in-out;
     margin-bottom: 2%;
 }
+
+.collapsed {
+    max-height: 0px;
+}
+
 .expanded {
-    max-height: 500px;
+    max-height: 900px;
+}
+
+.group-header {
+    margin-top: 2em;
+}
+
+.groups{
+    margin-top: -2em;
 }
 
 
