fixed parentheses bug

--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -193,6 +193,7 @@ a:hover {
       height: 20px;
 
     }
+  }
   .modalinfo .description-container .description {
     padding: 0em 1em 0.5em 1em;
     font-size: $text-standard-mobile;
